# tinit

./: .gitignore  Makefile  README.md  autogen.sh  configure.ac  init.c
src/: Makefile.am  ifnet.h
